<resources>

    <string-array name="titles">
        <item>Web Design</item>
        <item>App Design</item>
        <item>Digital Markting</item>
        <item>Branding</item>
        <item>Media Management</item>
        <item>FAQs</item>
        <item>SignOut</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_order_now">Order Now</string>
    <string name="nav_services">Services</string>
    <string name="nav_prev_services">Prev Orders</string>
    <string name="nav_our_projets">Our Projects</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_home_page">Home Page</string>
    <string name="nav_faqs">FAQ\'s</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_login">Login</string>
    <string name="login">Login</string>

    <string name="app_name">Ideas2Tech</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles_logged">
        <item>Home Page</item>
        <item>Our Projects</item>
        <item>Services</item>
        <item></item>
        <item>Order Now</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>FAQ\'s</item>
        <item>SignOut</item>
    </string-array>


    <string-array name="nav_item_activity_titles_not_logged">
        <item>Home Page</item>
        <item>Our Projects</item>
        <item>Services</item>
        <item>Order Now</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>FAQ\'s</item>
        <item>SignOut</item>
    </string-array>


    <string name="CHATTING_CLIENT_ID">mobile_sdk_client_651b0d149b179b0694c5</string>
    <string name="CHATTING_APP_ID">277bf757e6b8dcc213d3633ff7f72a611ebfeab3a8b3095f</string>
    <string name="APP_ID">85CF9FF2-FA37-46DE-9A9F-7795232216DF</string>
    <string name="retry">Retry again</string>


</resources>
